|frontend| add ui layout component

--- a/frontend/projects/personal-site-ui/src/lib/components/layout/layout.component.html
+++ b/frontend/projects/personal-site-ui/src/lib/components/layout/layout.component.html
@@ -4,13 +4,13 @@
   </mat-drawer>
 
   <div class="layout__content">
-    <mat-toolbar>
+    <mat-toolbar color="primary" class="layout__toolbar">
       <button type="button" mat-button (click)="drawer.toggle()">
         Menu
       </button>
     </mat-toolbar>
 
-    <div>
+    <div class="layout__outlet">
       <p>Outlet</p>
     </div>
   </div>
