--- a/frontend/projects/admin/src/styles.scss
+++ b/frontend/projects/admin/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global assets to this file, and also import other style files */
+@use "../../../dist/personal-site-material";
 
 *, *:before, *:after {
   margin: 0;
