|frontend| added reusable about, news, experience, dashboard components

--- a/frontend/projects/personal-site-ui/src/lib/components/layout/layout.component.html
+++ b/frontend/projects/personal-site-ui/src/lib/components/layout/layout.component.html
@@ -11,7 +11,7 @@
     </mat-toolbar>
 
     <div class="layout__outlet">
-      <p>Outlet</p>
+      <ng-content></ng-content>
     </div>
   </div>
 
