|frontend| added core library

--- a/frontend/projects/personal-site-ui/src/lib/components/layout/layout.component.html
+++ b/frontend/projects/personal-site-ui/src/lib/components/layout/layout.component.html
@@ -1,11 +1,13 @@
 <mat-drawer-container class="layout" autosize>
   <mat-drawer #drawer class="layout__sidenav" mode="over">
-    <p>Auto-resizing sidenav</p>
+    <div class="layout__menu">
+      <a *ngFor="let route of routes" [routerLink]="route" (click)="drawer.close()">{{route | titlecase}}</a>
+    </div>
   </mat-drawer>
 
   <div class="layout__content">
     <mat-toolbar color="primary" class="layout__toolbar">
-      <button type="button" mat-button (click)="drawer.toggle()">
+      <button type="button" mat-button (click)="drawer.open()">
         Menu
       </button>
     </mat-toolbar>
