--- a/frontend/projects/personal-site-ui/src/lib/components/layout/layout.component.scss
+++ b/frontend/projects/personal-site-ui/src/lib/components/layout/layout.component.scss
@@ -7,13 +7,33 @@
   height: 100%;
 
   &__sidenav {
-    width: 200px;
+    width: 20rem;
     height: 100%;
+    background-color: lightblue;
+  }
+
+  &__menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    height: 100%;
+
+    & a {
+      text-decoration: none;
+      color: black;
+    }
   }
 
   &__content {
     height: 100%;
   }
+}
+
+.mat-drawer .layout__sidenav .mat-drawer-inner-container {
+  display: flex;
+  flex-direction: column;
 }
 
 $layout-paddings: list.zip(screen.$screen-types, 1rem 6rem 12rem 20rem 28rem 36rem 44rem 52rem 60rem);
