--- a/frontend/projects/admin/src/app/login/login.component.html
+++ b/frontend/projects/admin/src/app/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="login__wrapper">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmitLoginForm()" class="login__form">
+    <mat-form-field class="login-form__field">
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="username">
+      <div *ngIf="usernameControl.invalid && (usernameControl.dirty || usernameControl.touched)">
+        <mat-error *ngIf="usernameControl.errors?.['required']">Username is required.</mat-error>
+        <mat-error *ngIf="usernameControl.errors?.['email']">Username must be a valid email.</mat-error>
+      </div>
+    </mat-form-field>
+
+    <mat-form-field class="login-form__field">
+      <mat-label>Password</mat-label>
+      <input matInput formControlName="password">
+      <div *ngIf="passwordControl.invalid && (usernameControl.dirty || usernameControl.touched)">
+        <mat-error *ngIf="usernameControl.errors?.['required']">Password is required.</mat-error>
+      </div>
+    </mat-form-field>
+
+    <button [disabled]="loginForm.invalid" type="submit" mat-raised-button color="primary">Login</button>
+  </form>
+</div>
