--- a/frontend/projects/admin/src/app/shell/companies/companies.component.html
+++ b/frontend/projects/admin/src/app/shell/companies/companies.component.html
@@ -1,6 +1,36 @@
-<ng-container *ngIf="(companies$ | async) as companies">
-  <div *ngFor="let company of companies">
-    <h1>{{ company.name }}</h1>
-    <p>{{ company.preview }}</p>
-  </div>
-</ng-container>
+<div>
+  <br />
+
+  <h1>
+    <span>Companies</span>
+    <button mat-raised-button color="primary" style="float: right" (click)="onCreateTableRow()">Add</button>
+  </h1>
+
+  <br />
+  <ng-container *ngIf="(companies$ | async) as companies">
+    <table mat-table [dataSource]="companies">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{element.name}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef>Created</th>
+        <td mat-cell *matCellDef="let element">{{element.createdAt}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="updatedAt">
+        <th mat-header-cell *matHeaderCellDef>Updated</th>
+        <td mat-cell *matCellDef="let element">{{element.updatedAt}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="deletedAt">
+        <th mat-header-cell *matHeaderCellDef>Deleted</th>
+        <td mat-cell *matCellDef="let element">{{element.deletedAt ?? 'NA'}}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: tableColumns;" (click)="onClickTableRow(row)"></tr>
+    </table>
+  </ng-container>
+</div>
