|frontend admin| applied abstract editor dialog to companies

--- a/frontend/projects/admin/src/app/shell/companies/companies.component.html
+++ b/frontend/projects/admin/src/app/shell/companies/companies.component.html
@@ -1,4 +1,5 @@
 <app-editor
+  [editorDialog]="companyEditorDialog"
   [dataSource]="companies$"
   [displayedColumns]="tableColumns"
   [title]="'Companies'"
