|frontend ui| added close button to dialog

--- a/frontend/projects/personal-site-ui/src/lib/components/dialog/dialog.component.html
+++ b/frontend/projects/personal-site-ui/src/lib/components/dialog/dialog.component.html
@@ -1,7 +1,9 @@
 <div class="dialog">
   <div class="dialog__header">
     <ng-template uiDialogHeaderHost></ng-template>
-    <button (click)="onClose()">Close</button>
+    <button mat-icon-button (click)="onClose()">
+      <mat-icon fontIcon="close"></mat-icon>
+    </button>
   </div>
   <div class="dialog__body">
     <ng-template uiDialogBodyHost></ng-template>
