|frontend admin| delete table row handler

--- a/frontend/projects/admin/src/app/shell/companies/companies.component.html
+++ b/frontend/projects/admin/src/app/shell/companies/companies.component.html
@@ -5,4 +5,5 @@
   [title]="'Companies'"
   (create)="onCreateCompany($event)"
   (update)="onUpdateCompany($event)"
+  (delete)="onDeleteCompany($event)"
 ></app-editor>
