--- a/frontend/projects/admin/src/app/shell/editor/editor.component.html
+++ b/frontend/projects/admin/src/app/shell/editor/editor.component.html
@@ -1,7 +1,9 @@
 <div class="editor">
   <div class="editor__header">
     <h1>{{title}}</h1>
-    <mat-icon fontIcon="add" (click)="onAddTableRow()"></mat-icon>
+    <button mat-icon-button (click)="onAddTableRow()">
+      <mat-icon fontIcon="add"></mat-icon>
+    </button>
   </div>
 
   <ng-container *ngIf="(source$ | async) as dataSource">
@@ -11,8 +13,23 @@
         <td mat-cell *matCellDef="let element">{{element[column]}}</td>
       </ng-container>
 
+      <ng-container matColumnDef="menu">
+        <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button [matMenuTriggerFor]="rowMenu" (click)="$event.stopPropagation()">
+            <mat-icon fontIcon="more_vert"></mat-icon>
+          </button>
+          <mat-menu #rowMenu>
+            <button mat-menu-item (click)="onDeleteTableRow(element)">
+              <mat-icon fontIcon="delete_forever"></mat-icon>
+              <span>Delete</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
-      <tr mat-row *matRowDef="let row; columns: columns" (click)="onClickTableRow(row)"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnsWithMenu" (click)="onClickTableRow(row)"></tr>
     </table>
   </ng-container>
 </div>
