|frontend admin| create experience with background image upload

--- a/frontend/projects/admin/src/app/shell/experience/experience.component.html
+++ b/frontend/projects/admin/src/app/shell/experience/experience.component.html
@@ -1,1 +1,9 @@
-<p>experience works!</p>
+<app-editor
+  [editorDialog]="experienceEditorDialog"
+  [dataSource]="experienceList$"
+  [displayedColumns]="tableColumns"
+  [title]="'Experience'"
+  (create)="onCreateExperience($event)"
+  (update)="onUpdateExperience($event)"
+  (delete)="onDeleteExperience($event)"
+></app-editor>
