|feature experience| working on downloading images

--- a/frontend/projects/admin/src/app/shell/companies/companies.component.html
+++ b/frontend/projects/admin/src/app/shell/companies/companies.component.html
@@ -1,6 +1,6 @@
 <app-editor
   [editorDialog]="companyEditorDialog"
-  [dataSource]="companies$"
+  [dataSource]="companies"
   [displayedColumns]="tableColumns"
   [title]="'Companies'"
   (create)="onCreateCompany($event)"
