--- a/frontend/projects/admin/src/app/shell/experience/experience-editor-dialog/experience-editor-dialog.component.html
+++ b/frontend/projects/admin/src/app/shell/experience/experience-editor-dialog/experience-editor-dialog.component.html
@@ -38,7 +38,11 @@
 
       <mat-form-field class="experience__input" appearance="fill">
         <mat-label>Company</mat-label>
-        <input matInput formControlName="companyId">
+        <mat-select matInput formControlName="companyId">
+<!--          <mat-option *ngFor="let company of companies" [value]="company.id">-->
+<!--            {{company.name}}-->
+<!--          </mat-option>-->
+        </mat-select>
       </mat-form-field>
 
       <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="onSave()">Save</button>
