--- a/frontend/projects/admin/src/app/shell/experience/experience.component.html
+++ b/frontend/projects/admin/src/app/shell/experience/experience.component.html
@@ -1,6 +1,6 @@
 <app-editor
   [editorDialog]="experienceEditorDialog"
-  [dataSource]="experienceList$"
+  [dataSource]="experienceList"
   [displayedColumns]="tableColumns"
   [title]="'Experience'"
   (create)="onCreateExperience($event)"
