--- a/frontend/projects/admin/src/app/shell/images/images.component.html
+++ b/frontend/projects/admin/src/app/shell/images/images.component.html
@@ -1,1 +1,8 @@
-<img *ngFor="let image of images">
+<div *ngFor="let image of images" class="card">
+  <img class="img" [src]="image.content" [alt]="image.name">
+  <div>
+    <h3>Name: {{image.name}}</h3>
+    <p>Type: {{image.type}}</p>
+    <p>Updated: {{image.updatedAt}}</p>
+  </div>
+</div>
