--- a/frontend/projects/admin/src/app/shell/editor/editor.component.html
+++ b/frontend/projects/admin/src/app/shell/editor/editor.component.html
@@ -1,13 +1,13 @@
-<div class="editor">
-  <div class="editor__header">
+<section class="editor">
+  <header class="editor__header">
     <h1>{{title}}</h1>
     <button mat-icon-button (click)="onAddTableRow()">
       <mat-icon fontIcon="add"></mat-icon>
     </button>
-  </div>
+  </header>
 
   <ng-container *ngIf="dataSource">
-    <table class="editor__body" mat-table [dataSource]="dataSource">
+    <table class="editor__table" mat-table [dataSource]="dataSource">
       <ng-container [matColumnDef]="column" *ngFor="let column of columns">
         <th mat-header-cell *matHeaderCellDef>{{column}}</th>
         <td mat-cell *matCellDef="let element">{{element[column]}}</td>
@@ -32,4 +32,4 @@
       <tr mat-row *matRowDef="let row; columns: columnsWithMenu" (click)="onClickTableRow(row)"></tr>
     </table>
   </ng-container>
-</div>
+</section>
