--- a/frontend/projects/admin/src/app/shell/editor/editor.component.scss
+++ b/frontend/projects/admin/src/app/shell/editor/editor.component.scss
@@ -5,9 +5,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-
-  &__body {
-    margin-top: 1rem;
+    padding-block-end: 1rem;
   }
 }
