--- a/frontend/projects/admin/src/app/shell/images/image-editor-dialog/image-editor-dialog.component.html
+++ b/frontend/projects/admin/src/app/shell/images/image-editor-dialog/image-editor-dialog.component.html
@@ -1,1 +1,27 @@
-<p>image-editor-dialog works!</p>
+<ui-dialog (close)="onClose()">
+  <ng-container *uiDialogHeader>
+    <h1>Image editor</h1>
+  </ng-container>
+
+  <ng-container *uiDialogBody>
+    <section [formGroup]="form" class="image">
+      <mat-form-field *ngIf="isUpdate" class="image__input" appearance="fill">
+        <mat-label>Image id</mat-label>
+        <input matInput formControlName="id">
+      </mat-form-field>
+
+      <mat-form-field class="image__input" appearance="fill">
+        <mat-label>Image name</mat-label>
+        <input matInput formControlName="name">
+      </mat-form-field>
+
+      <mat-form-field class="image__input" appearance="fill">
+        <mat-label>Image type</mat-label>
+        <input matInput formControlName="type">
+      </mat-form-field>
+
+      <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="onSave()">Save</button>
+      <button mat-raised-button color="accent" (click)="onCancel()">Cancel</button>
+    </section>
+  </ng-container>
+</ui-dialog>
