--- a/frontend/projects/admin/src/app/shell/images/images.component.scss
+++ b/frontend/projects/admin/src/app/shell/images/images.component.scss
@@ -1,7 +1,15 @@
-:host {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
-  gap: 1rem;
+.images {
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+    gap: 1rem;
+  }
 }
 
 .img {
