--- a/frontend/projects/admin/src/app/shell/images/images.component.html
+++ b/frontend/projects/admin/src/app/shell/images/images.component.html
@@ -3,4 +3,6 @@
   [dataSource]="images"
   [displayedColumns]="tableColumns"
   [title]="'Images'"
+  (create)="onCreateImage($event)"
+  (delete)="onDeleteImage($event)"
 ></app-editor>
