--- a/frontend/projects/admin/src/app/shell/images/image-editor-dialog/image-editor-dialog.component.html
+++ b/frontend/projects/admin/src/app/shell/images/image-editor-dialog/image-editor-dialog.component.html
@@ -3,11 +3,12 @@
     <h1>Image editor</h1>
   </ng-container>
 
-  <ng-container *uiDialogBody  class="image">
-    <img [src]="entity?.content ?? imagesSource" alt="Image content" class="image__content">
+  <ng-container *uiDialogBody class="image">
+    <img [src]="imageSource" alt="Image content" class="image__content">
 
     <div>
-      <input type="file" #fileChooser (click)="fileChooser.value = ''" (change)="onSelectFile($event)" style="display: none">
+      <input type="file" #fileChooser (click)="fileChooser.value = ''" (change)="onSelectFile($event)"
+             accept="image/png, image/jpg, image/jpeg" style="display: none">
       <button mat-raised-button color="primary" (click)="selectFile()">Select file</button>
     </div>
 
