|feature experience| editing experience company

--- a/frontend/projects/admin/src/app/shell/experience/experience-editor-dialog/experience-editor-dialog.component.html
+++ b/frontend/projects/admin/src/app/shell/experience/experience-editor-dialog/experience-editor-dialog.component.html
@@ -34,9 +34,9 @@
       <mat-form-field class="experience__input" appearance="fill">
         <mat-label>Company</mat-label>
         <mat-select matInput formControlName="companyId">
-<!--          <mat-option *ngFor="let company of companies" [value]="company.id">-->
-<!--            {{company.name}}-->
-<!--          </mat-option>-->
+          <mat-option *ngFor="let company of companies" [value]="company.id">
+            {{company.name}}
+          </mat-option>
         </mat-select>
       </mat-form-field>
 
