--- a/frontend/projects/admin/src/app/shell/editor/editor.component.html
+++ b/frontend/projects/admin/src/app/shell/editor/editor.component.html
@@ -6,7 +6,7 @@
     </button>
   </header>
 
-  <ng-container *ngIf="dataSource">
+  <ng-container *ngIf="dataSource else loader">
     <table class="editor__table" mat-table [dataSource]="dataSource">
       <ng-container [matColumnDef]="column" *ngFor="let column of columns">
         <th mat-header-cell *matHeaderCellDef>{{column}}</th>
@@ -32,4 +32,8 @@
       <tr mat-row *matRowDef="let row; columns: columnsWithMenu" (click)="onClickTableRow(row)"></tr>
     </table>
   </ng-container>
+
+  <ng-template #loader>
+    Loading...
+  </ng-template>
 </section>
